# rpi_remote_client

./: .gitignore  Makefile  README.md  Readme.md  config.ini.sample  forward.py  forward_client.py  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish_package.yml
rpi_remote/: forward.py  rpi_remote.py
rpi_remote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
