[tool.poetry]
name = "rpi-remote"
version = "0.1.3"
description = "Rpi remote client"
authors = ["Radics Aron <radics.aron.jozsef@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rpi_remote"}]

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^2.12.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"

[tool.poetry.scripts]
rpi-remote = 'rpi_remote.rpi_remote:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
