[project]
name = "rpi-remote"
version = "1.0.1"
authors = [
  { name="Aron Radics", email="radics.aron.jozsef@gmail.com" },
]
description = "Rpi remote client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paramiko==2.12.0",
    "requests==2.28.1",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/radaron/rpi_remote_client"