[project]
name = "rpi-remote"
version = "2.1.1"
authors = [
  { name="Aron Radics", email="radics.aron.jozsef@gmail.com" },
]
description = "Rpi remote client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1",
    "psutil>=5.8.0",
]

[project.scripts]
rpi-remote = "rpi_remote.rpi_remote:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pylint"
]

[project.urls]
Homepage = "https://github.com/radaron/rpi_remote_client"
